--- a/main.css
+++ b/main.css
@@ -36,7 +36,10 @@ button{
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
+    transition: background-color 0.3s ease-in;
 }
+
+
 .about__image {
     width: 500px;
 }
@@ -77,17 +80,96 @@ button{
 .form_container {
     width: 550px;
 }
-.form{
+.form {
+    display: flex;
+    justify-content:center;
+    align-items:center;
     background-color: #1D263A;
     color: #fff;
     padding-top: 115px; 
     padding-bottom: 115px;
     text-align: center
 }
+
 .form h1{
     font-size: 48px;
 }
 .form p{
     font-size: 18px;
     opacity: 0.65
+}
+.form_group {
+    display:flex;
+    flex-direction: column;
+    text-align: left;
+}
+.form form{
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 18px;
+    border:none;  
+    outline: none;
+
+}
+.form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 18px;
+    border:none;
+    appearance: none;
+    outline: none;
+
+}
+
+button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+}
+
+footer {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 90px 20px 90px 20px;
+}
+.footer__container{
+    display:flex;
+    align-items: center;
+
+}
+.footer__copyright{
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+.footer__group {
+    margin-right: 80px;
+}
+
+.footer__group h3{
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;    
+}
+.footer__links{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links a{
+    margin-bottom: 15px;
 }
